# opencl-intercept-layer

intercept/: CMakeLists.txt
intercept/src/: api_sticker.cpp  api_sticker.h  controls.h  dispatch.cpp  intercept.cpp  intercept.h
parser/: CMakeLists.txt  Trace-Intel3D_OCL.cmd  Trace-IntelMedia3D_OCL.cmd  VkEtw.man  Windows.cmake  install.bat  readme.md  register.reg
release/: Trace-IntelMedia3D_OCL.cmd  install.bat
